# clovers-setu-collection

./: .gitignore  LICENSE  README.md  pyproject.toml  setu_api.py
clovers-setu-collection/: __init__.py  config.py  setu_api.py
clovers-setu-collection/api/: Lolicon.py  MirlKoi.py
clovers_setu_collection/: __init__.py  config.py  setu_api.py  typing.py
clovers_setu_collection/api/: Anosu.py  Lolicon.py  MirlKoi.py  __init__.py  interface.py
