[tool.poetry]
name = "clovers_setu_collection"
version = "0.1.3"
description = ""
authors = ["karisaya <1048827424@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
clovers = {extras = ["tools"], version = "^0.1.16"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
